[project]
name = "knowl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "chromadb>=1.1.0",
    "llama-cpp-python>=0.3.16",
    "mistune>=3.1.4",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
